--- a/index.html
+++ b/index.html
@@ -9,21 +9,14 @@
 By mikrotiktool.Github.io' name='description'/>
 <meta content='tool, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wirelessm rtrwnet' name='keywords'/>
 <meta content='index, follow, noodp' name='robots'/>
-<link rel="shortcut icon" href="mikrotiktool.github.io/favicon.ico" type="image/x-icon"> 
+<link rel="shortcut icon" href="https://mikrotiktool.github.io/favicon.ico" type="image/x-icon"> 
 <meta property="og:title" content="MikroTik Online Tools (Unofficial) ">
 <meta property="og:description" content="MikroTik Online Tools (Unofficial) ">
 <meta property="og:image:alt" content="MikroTik Online Tools (Unofficial) ">
 <meta property="og:type" content="website">
-<meta property="og:url" content="mikrotiktool.github.io">  
-<!-- Bootstrap -->
-    <script type="text/javascript" src="./Default_files/jquery-1.8.3.min.js.download"></script>
-    <script type="text/javascript" src="./Default_files/bootstrap.min.js.download"></script>
-    <link rel="stylesheet" href="./Default_files/bootstrap.min.css" media="screen">
-    	<script>
-	$(document).ready(function(){
-		$("#MyPopup").modal('show');
-	});
-</script><style> 
+<meta property="og:url" content="mikrotiktool.github.io">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3815059393374366" crossorigin="anonymous"></script>
+<style> 
 body {
 background: #8E2DE2;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to left, #8E2DE2, #4A00E0);  /* Chrome 10-25, Safari 5.1-6 */
@@ -307,7 +300,7 @@ background-color: #8E2DE2
 <body onLoad="callmodal()">
 <div class="content">
 <div class="logo">	  
-<a href="mikrotiktool.github.io"><span style="color:#8E2DE2 !important">mikrotiktool</span>.Github.io</a> <img style="margin-left:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmikrotiktool.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=pageview&edge_flat=false" alt="Hits"/>
+<a href="https://mikrotiktool.github.io"><span style="color:#8E2DE2 !important">mikrotiktool</span>.Github.io</a> <img style="margin-left:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmikrotiktool.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=pageview&edge_flat=false" alt="Hits"/>
 </div>	
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- mikrotiktool -->
@@ -330,36 +323,30 @@ background-color: #8E2DE2
   gtag('config', 'G-M5TL99Q9M2');
 </script>
 <span style="line-height:0;float:left; display:inline;margin-right:6px; margin-top:25px">
-<img src="mikrotiktool.github.io/mikrotik/img/logo.png" alt="HOME">
+<img src="https://mikrotiktool.github.io/mikrotik/img/logo.png" alt="HOME">
 </span>	 
 <h2>FREE MIKROTIK ROUTEROS TOOLS</h2>
 <h3>MIKROTIK <span style="color:red">[</span> SCRIPT <span style="color:red">]</span> ROUTEROS DATABASE</h3>
-<p><a target="_blank"  href="mikrotiktool.github.io/mikrotik">Complete Mikrotik RouterOS Script Database</a> - Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!</p>
+<p><a target="_blank"  href="https://mikrotiktool.github.io/mikrotik">Complete Mikrotik RouterOS Script Database</a> - Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!</p>
 
 <h3>MIKROTIK SCRIPT GENERATOR </h3>
-<p><a target="_blank"  href="mikrotiktool.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Mikrotik Notification Expired For Hotspot, PPPoE And Static IP</a> - Mikrotik All-In-One Notification Isolated and Expired For Hotspot, PPPoE And Static IP For RouterOS</p>
-<p><a target="_blank"  href="mikrotiktool.github.io/mikrotik-burst-limit-calculator.html">MikroTik Burst Limit Calculator</a> - Simple MikroTik Burst Limit Calculator For RouterOS</p>
-<p><a target="_blank"  href="mikrotiktool.github.io/mikrotik-pcq-burst-rate-queue-size-generator.html">MikroTik PCQ Burst Rate + Queue Size Calculator</a> - MikroTik PCQ Burst Rate + Queue Size Calculator For RouterOS</p>
-<p><a target="_blank"  href="mikrotiktool.github.io/vpn-game-generator.html">VPN Routing Port Game Script Generator</a> - Static Routing Vpn Game Script Generator or Script Maker (Port Game Routing Method) </p>
-<p><a target="_blank"  href="mikrotiktool.github.io/vpn-game-generator2.html">VPN Routing IP Address Games Script Generator</a> - Static Routing Vpn Game Script Generator or Script Maker (Ip Address Game Routing Method)</p>
-<p><a target="_blank"  href="mikrotiktool.github.io/ecmp.html">Load Balancing ECMP Script Generator</a> - Load Balancing ECMP (Equal Cost Multi Path) Script Generator or Script Maker For Mikrotik Routeros</p>
-<p><a target="_blank"  href="mikrotiktool.github.io/pcc.html">Load Balancing PCC Script Generator</a> - LB PCC / Load Balancing PCC Script Generator or Script Maker For Mikrotik Routeros</p>
-<p><a target="_blank"  href="mikrotiktool.github.io/nth.html">Load Balancing NTH Script Generator</a> - LB NTH / Load Balancing NTH Script Generator or Script Maker For Mikrotik Routeros</p>  
-<p><a target="_blank"  href="mikrotiktool.github.io/simple-queue-generator.html">Simple Queue Script Generator For Mikrotik + Tocken Bucket</a> - Simple Queue Script Generator or Script Maker For Mikrotik Plus Token Bucket - For IP Subnet /24 Only</p>
-<p><a target="_blank"  href="mikrotiktool.github.io/simple-queue-generator-shared.html">Simple Queue Script Generator For Mikrotik + Bandwidth Shared (UpTo)</a> - Simple Queue Script Generator Mikrotik + Bandwidth Shared (Upto) - For IP Subnet /24 Only</p>
-<p><a target="_blank"  href="mikrotiktool.github.io/queue-tree-generator-shared.html">Queue Tree Script Generator For Mikrotik + Bandwidth Shared (UpTo)</a> - Queue Tree Script Generator Mikrotik + Bandwidth Shared (Upto) - For IP Subnet /24 Only</p>
-<p><a target="_blank"  href="mikrotiktool.github.io/remote-ip-public-static.html">Remote IP Public Static For Secondary Gateway Mikrotik</a> - Simple Script how Remote IP Public Static For Secondary Gateway Mikrotik</p>
-<p><a target="_blank"  href="mikrotiktool.github.io/port-knocking-icmp.html">Port Knocking Generator with (ping) ICMP + Packet Size</a> - Mikrotik Port Knocking Generator or Knocking Script Maker With Icmp + Packet Size</p>
-<p><a target="_blank"  href="mikrotiktool.github.io/pcc-calculation.html">LB PCC Calculation / Load Balancing PCC Calculation</a> - Simple LB PCC (Load Balancing Per Connection Classifier) Calculator</p>
-<p><a target="_blank"  href="mikrotiktool.github.io/mikrotik-pcq-generator.html">PCQ Generator For Queue Tree And Queue Simple</a> - Mikrotik PCQ Generator For Queue Tree And Queue Simple, very easy</p>
-<p><a target="_blank"  href="mikrotiktool.github.io/vpn-tunnel-all-traffic-script-generator.html">VPN Tunnel All Traffic Script Generator</a> - VPN Tunnel All Traffic Script Generator For Mikrotik RouterOS</p>
-<p><a target="_blank"  href="mikrotiktool.github.io/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login Script Generator</a> - Wifi.id WMS and Seamless Auto Login Script Generator For Mikrotik RouterOS</p>
-
-<h3>MIKROTIK BATCH TOOLS </h3>
-<p><a target="_blank"  href="https://github.com/mikrotiktool/FREE-DNS-PING-TEST-DOS-BATCH">Batch: DNS Ping Test</a> - Free DNS Ping Test From DOS Batch</p>
-<p><a target="_blank"  href="https://github.com/mikrotiktool/mikrotik-port-scanner">Batch: Winbox Port Scanner</a> - Just a simple test for routeros port scanning</p>
-<p><a target="_blank"  href="https://github.com/mikrotiktool/MIKROTIK-AUTO-BACKUP-FROM-BATCH">Batch: RouterOS Auto Backup</a> - Easy backup mikrotik (.backup) only use BATCH Windows</p>
-<p><a target="_blank"  href="https://github.com/mikrotiktool/Restore-Winbox-Sessions-to-Default">Batch: Restore Winbox Session</a> - Restore Winbox Sessions to Default for Mikrotik with Bacth File</p>
+<p><a target="_blank"  href="/mikrotik-expired-isolate-pppoe-hotspot.html">Mikrotik Notification Expired For Hotspot, PPPoE And Static IP</a> - Mikrotik All-In-One Notification Isolated and Expired For Hotspot, PPPoE And Static IP For RouterOS</p>
+<p><a target="_blank"  href="/mikrotik-burst-limit-calculator.html">MikroTik Burst Limit Calculator</a> - Simple MikroTik Burst Limit Calculator For RouterOS</p>
+<p><a target="_blank"  href="/mikrotik-pcq-burst-rate-queue-size-generator.html">MikroTik PCQ Burst Rate + Queue Size Calculator</a> - MikroTik PCQ Burst Rate + Queue Size Calculator For RouterOS</p>
+<p><a target="_blank"  href="/vpn-game-generator.html">VPN Routing Port Game Script Generator</a> - Static Routing Vpn Game Script Generator or Script Maker (Port Game Routing Method) </p>
+<p><a target="_blank"  href="/vpn-game-generator2.html">VPN Routing IP Address Games Script Generator</a> - Static Routing Vpn Game Script Generator or Script Maker (Ip Address Game Routing Method)</p>
+<p><a target="_blank"  href="/ecmp.html">Load Balancing ECMP Script Generator</a> - Load Balancing ECMP (Equal Cost Multi Path) Script Generator or Script Maker For Mikrotik Routeros</p>
+<p><a target="_blank"  href="/pcc.html">Load Balancing PCC Script Generator</a> - LB PCC / Load Balancing PCC Script Generator or Script Maker For Mikrotik Routeros</p>
+<p><a target="_blank"  href="/nth.html">Load Balancing NTH Script Generator</a> - LB NTH / Load Balancing NTH Script Generator or Script Maker For Mikrotik Routeros</p>  
+<p><a target="_blank"  href="/simple-queue-generator.html">Simple Queue Script Generator For Mikrotik + Tocken Bucket</a> - Simple Queue Script Generator or Script Maker For Mikrotik Plus Token Bucket - For IP Subnet /24 Only</p>
+<p><a target="_blank"  href="/simple-queue-generator-shared.html">Simple Queue Script Generator For Mikrotik + Bandwidth Shared (UpTo)</a> - Simple Queue Script Generator Mikrotik + Bandwidth Shared (Upto) - For IP Subnet /24 Only</p>
+<p><a target="_blank"  href="/queue-tree-generator-shared.html">Queue Tree Script Generator For Mikrotik + Bandwidth Shared (UpTo)</a> - Queue Tree Script Generator Mikrotik + Bandwidth Shared (Upto) - For IP Subnet /24 Only</p>
+<p><a target="_blank"  href="/remote-ip-public-static.html">Remote IP Public Static For Secondary Gateway Mikrotik</a> - Simple Script how Remote IP Public Static For Secondary Gateway Mikrotik</p>
+<p><a target="_blank"  href="/port-knocking-icmp.html">Port Knocking Generator with (ping) ICMP + Packet Size</a> - Mikrotik Port Knocking Generator or Knocking Script Maker With Icmp + Packet Size</p>
+<p><a target="_blank"  href="/pcc-calculation.html">LB PCC Calculation / Load Balancing PCC Calculation</a> - Simple LB PCC (Load Balancing Per Connection Classifier) Calculator</p>
+<p><a target="_blank"  href="/mikrotik-pcq-generator.html">PCQ Generator For Queue Tree And Queue Simple</a> - Mikrotik PCQ Generator For Queue Tree And Queue Simple, very easy</p>
+<p><a target="_blank"  href="/vpn-tunnel-all-traffic-script-generator.html">VPN Tunnel All Traffic Script Generator</a> - VPN Tunnel All Traffic Script Generator For Mikrotik RouterOS</p>
+<p><a target="_blank"  href="/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login Script Generator</a> - Wifi.id WMS and Seamless Auto Login Script Generator For Mikrotik RouterOS</p>
 
 <h3>MIKROTIK TOOLS BY MIKROTIK.COM</h3>
 <p><a target="_blank"  href="https://mt.lv/winbox64">Winbox-64 (64bit)</a> - Winbox 64 bit is a small utility that allows administration of MikroTik RouterOS using a fast and simple GUI t is a native Win64 binary</p>
@@ -402,7 +389,7 @@ background-color: #8E2DE2
 <p><a target="_blank"  href="https://sarang.web.id/billing-hotspot-by-sarang-net/">Billing Hotspot By Sarang-Net</a> - Billing Hotspot By Sarang-Net is a desktop application use (MikroTik API PHP class) to assist MikroTik Hotspot management.</p>
 <p><a target="_blank"  href="https://topsetting.com">MIXRadius</a> - MIXRADIUS has many features that are very powerful and very stable which will make it easier for you to manage internet customers and hotspot voucher sales. </p>
 <p><a target="_blank"  href="https://rlradius.id/">RL-Radius</a> - RLRadius is a radius server, hotspot mikrotik billing and PPPoE integrated in one system, rich in features and can be used for many mikrotik routers on different networks and locations, with centralized db on one server.</p>
-<p><a target="_blank"  href=" https://sourceforge.net/projects/the-userman">TheUserman</a> - TheUserman is Mikrotik Hotspot User Management Application Based on Desktop and Android, Mikrotik Hotspot Voucher Maker Application.</p>
+<p><a target="_blank"  href="https://sourceforge.net/projects/the-userman">TheUserman</a> - TheUserman is Mikrotik Hotspot User Management Application Based on Desktop and Android, Mikrotik Hotspot Voucher Maker Application.</p>
 <p><a target="_blank"  href="https://github.com/ibnux/phpmixbill">PHPMixBill</a> - PHPMixBill is a Hotspot and PPPOE billing application for Mikrotik using the PHP programming language and using the Mikrotik API as communication with the router.</p>
 <p><a target="_blank"  href="https://github.com/aviantorichad/MIKROSTATOR">MIKROSTATOR</a> - MIKROSTATOR is an application that is used to perform administration on an internet network using a mikrotik router.</p>
 <p><a target="_blank"  href="https://mikbotam.net">MIKBOTAM</a> - Mikbotam is an application that makes it easy for hotspot services, because it makes it easier to generate usernames and passwords as well as easier user management with a pleasing web interface.</p>
@@ -420,7 +407,7 @@ background-color: #8E2DE2
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script> 
 <div style="margin-top:20px; text-align:center; font-size:14px"
-© Copyright 2020-2021 <a href="mikrotiktool.github.io">Free Mikrotik Routeros Tools</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> <br> Don't Forget to Follow <a href="https://github.com/mikrotiktool">My Github</a>   
+© Copyright 2020-2021 <a href="htpps://mikrotiktool.github.io">Free Mikrotik Routeros Tools</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> <br> Don't Forget to Follow <a href="https://github.com/mikrotiktool">My Github</a>   
 </div>
 </div>
 <script type="text/javascript">
