--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>Free MikroTik RouterOS Online Tools - By mikrotiktool.Github.io</title>
+<meta name="google-site-verification" content="google-site-verification=v9jfwyACp9axJqzwm1GlUgutNsmz-gLAg37rIqsnln0">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -305,11 +306,9 @@ background-color: #8E2DE2
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- mikrotiktool -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:inline-block;width:728px;height:90px"
      data-ad-client="ca-pub-3815059393374366"
-     data-ad-slot="2107412109"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="3896250138"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -400,7 +399,7 @@ background-color: #8E2DE2
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-3815059393374366"
-     data-ad-slot="2107412109"
+     data-ad-slot="3756649336"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
